...
      String descrizione = descrizioneController.text;
      String urlCorso = urlCorsoController.text;
      String imagePath = 'images/corsodiformazione11.jpg';

      CorsoDiFormazioneDTO corso = CorsoDiFormazioneDTO(
        nomeCorso: nomeCorso,
        nomeResponsabile: nomeResponsabile,
        cognomeResponsabile: cognomeResponsabile,
        descrizione: descrizione,
        urlCorso: urlCorso,
        immagine: imagePath,
      );
      await sendDataToServer(corso);
    } else {
      print("Errore creazione oggetto corso");
...
  /// Gestisce l'invio del corso di formazione e dell'immagine associata.
  Future<void> sendDataToServer(CorsoDiFormazioneDTO corso) async {
    // Prima invia i dati del corso
    final url =
        Uri.parse('http://10.0.2.2:8080/gestioneReintegrazione/addCorso');
    final response = await http.post(
      url,
      headers: {'Content-Type': 'application/json'},
      body: jsonEncode(corso),
    );

    if (response.statusCode == 200 && _image != null) {
      final imageUrl =
          Uri.parse('http://10.0.2.2:8080/gestioneReintegrazione/addImage');
      final imageRequest = http.MultipartRequest('POST', imageUrl);

      imageRequest.files
          .add(await http.MultipartFile.fromPath('immagine', _image!.path));

      imageRequest.fields['nome'] = corso.nomeCorso;

      final imageResponse = await imageRequest.send();
      if (imageResponse.statusCode == 200) {
        Navigator.pushNamed(context, AppRoutes.homeADS);
        ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(
            content: Text(
              'Corso inserito con successo',
              style: TextStyle(
                color: Colors.white,
                fontSize: 16,
              ),
            ),
            backgroundColor: Colors.lightBlue,
...
    return Scaffold(
      appBar: AdsAppBar(
        showBackButton: true,
      ),
      endDrawer: AdsAppBar.buildDrawer(context),
      body: SingleChildScrollView(
        key: const Key('inserisciCorso'),
        child: Padding(
          padding: EdgeInsets.all(screenWidth * 0.08),
          child:
              Column(crossAxisAlignment: CrossAxisAlignment.center, children: [
            const Text(
              'Inserisci Corso di Formazione',
...
                    padding: EdgeInsets.only(
                        left: 15.0,
                        right: 15.0,
                        top: 15,
                        bottom: _isEmailValid ? 15 : 20),
                    child: TextFormField(
                      key: const Key('email'),
                      controller: emailController,
                      onChanged: (value) {
                        setState(() {
                          _isEmailValid = validateEmail(value);
                        });
                      },
...
                    padding: EdgeInsets.only(
                        left: 15.0,
                        right: 15.0,
                        top: 15,
                        bottom: _isTelefonoValid ? 15 : 20),
                    child: TextFormField(
                      key: const Key('numero'),
                      controller: numTelefonoController,
                      onChanged: (value) {
                        setState(() {
                          _isTelefonoValid = validateTelefono(value);
                        });
                      },
...
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                  ),
                  SizedBox(height: screenWidth * 0.1),
                  ElevatedButton(
                    key: const Key('inserisciButton'),
                    onPressed: () {
                      submitForm();
                    },
                    style: ElevatedButton.styleFrom(
                      backgroundColor: Colors.transparent,
                      foregroundColor: Colors.black,
...
