...
        showBackButton: false,
      ),
      endDrawer: AdsAppBar.buildDrawer(context),
      body: Padding(
        padding: const EdgeInsets.only(top: 20),
        child: CustomScrollView(
          key: const Key('homeAds'),
          slivers: [
            SliverPadding(
              padding: const EdgeInsets.all(8.0),
              sliver: SliverGrid(
                gridDelegate: const SliverGridDelegateWithFixedCrossAxisCount(
                  crossAxisCount: 2,
...
