...
      String via = viaController.text;
      String provincia = provinciaController.text;
      String email = emailController.text;
      String imagePath = 'images/corsodiformazione11.jpg';

      EventoDTO evento = EventoDTO(
          nomeEvento: nome,
          descrizione: descrizione,
          approvato: false,
          citta: citta,
          via: via,
          provincia: provincia,
          email: email,
          immagine: imagePath,
          id_ca: JWTUtils.getIdFromToken(accessToken: await token),
          date: selectedDate!);
      sendDataToServer(evento);
    }
  }
...
      final imageResponse = await imageRequest.send();
      if (imageResponse.statusCode == 200) {
        Navigator.pushNamed(context, AppRoutes.homeCA);
        ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(
            content: Text(
              'Richiesta inviata con successo',
              style: TextStyle(
                color: Colors.white,
                fontSize: 16,
              ),
            ),
            backgroundColor: Colors.lightBlue,
...
    return Scaffold(
      appBar: CaAppBar(
        showBackButton: true,
      ),
      endDrawer: CaAppBar.buildDrawer(context),
      body: SingleChildScrollView(
        key: const Key('inserisciEvento'),
        child: Padding(
          padding: EdgeInsets.all(screenWidth * 0.08),
          child:
              Column(crossAxisAlignment: CrossAxisAlignment.center, children: [
            const Text(
              'Inserisci evento',
...
                        bottom: _isDataValid ? 15 : 20),
                    child: GestureDetector(
                        onTap: () {
                          _selectDate(context);
                        },
                        child: DateTimeFormField(
                          key: const Key('data'),
                          decoration: const InputDecoration(
                            suffixIcon: Icon(Icons.event_note),
                            labelText: 'Data e ora',
                            labelStyle: TextStyle(
                              fontFamily: 'Poppins',
                              fontWeight: FontWeight.bold,
...
                          begin: Alignment.topLeft,
                          end: Alignment.bottomRight,
                        ),
                        borderRadius: BorderRadius.circular(30.0),
                      ),
                      child: Container(
                        key: const Key('inserisciEventoButton'),
                        width: screenWidth * 0.60,
                        height: screenWidth * 0.1,
                        padding: const EdgeInsets.all(10),
                        child: const Center(
                          child: Text(
                            'INSERISCI',
...
